--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-div{
+  width: 100%;
+  height: 25%;
+  background-color: rgb(102, 255, 184);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  position: absolute;
+  bottom: 75%;
 }
-
-.App-link {
-  color: #61dafb;
+.header-h1{
+  color: green;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar-div{
+  background-color: darksalmon;
+  width: 25%;
+  height: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 25%;
+}
+.sidebar-h1{
+  color: brown;
+}
+.main-div{
+  background-color:rgb(5, 184, 216);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 75%;
+  height: 75%;
+  position: absolute;
+  left: 25%;
+  top: 25%;
+}
+.main-h1{
+  color: blue;
 }
